--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -27,4 +27,4 @@ jobs:
       - name: Build and push Backend
         run: |
           docker build ./backend -t ghcr.io/${{ github.actor }}/backend:latest
-          docker push ghcr.io${{ github.actor }}/backend:latest
+          docker push ghcr.io/${{ github.actor }}/backend:latest
